fix wrapTodo

--- a/style.css
+++ b/style.css
@@ -148,6 +148,7 @@
     border-radius: 12px;
     border: 0;
     box-shadow: 0 0 8px;
+    text-align: center;
   }
 
   .submitTodo {
@@ -164,7 +165,7 @@
     align-items: center;
     gap: 10px;
     width: 100%;
-    height: 100%;
+    flex-grow: 1;
     border-radius: 12px;
     padding: 10px;
     box-shadow: 1px 1px 11px -1px rgba(255, 255, 255, 0.96);
